Fix overflow in card stations on home page

--- a/src/assets/style/cmps/_MainViewBody.scss
+++ b/src/assets/style/cmps/_MainViewBody.scss
@@ -14,9 +14,4 @@
         }
     }
 
-    .card-stations {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-        overflow-y: hidden;
-    }
 }
