--- a/src/assets/style/cmps/_StationList.scss
+++ b/src/assets/style/cmps/_StationList.scss
@@ -25,6 +25,7 @@
         grid-template-rows: 1fr;
         grid-auto-rows: 0;
         margin: -8px;
+        overflow: hidden;
 
         li {
             padding: 8px;
